[package]
name = "crpgp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[parse]
parse_deps = true

[dependencies]
chrono = "0.4.19"
derive_builder = "0.10.2"
libc = "0.2.117"
pgp = "0.7.2"
sha2 = "0.10.2"
smallvec = "1.8.0"
